# pozalabs

./: API.md  Dockerfile  README.md  app.Dockerfile  docker-compose.yml  mock.Dockerfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
libs/log/src/: winston.ts
libs/types/src/dtos/: musics.dto.ts  request.dto.ts
libs/types/src/interface/: category.ts  error.ts  musics.ts
libs/types/src/validate/: validate.common.ts  validate.tracks.ts
src/: app.module.ts  main.ts
src/categories/: category.service.ts
src/common/: checker.field.ts  errors.hateoas.ts  errors.interceptor.ts
src/musics/: musics.controller.ts  musics.module.ts  musics.service.ts
test/: jest.e2e.json  jest.unit.json  values.ts
test/category/: category.test.ts
test/e2e/: app.e2e-spec.ts
test/musics/: musics.test.ts
